--- a/experimental/PropertyDDS/examples/property-inspector/package.json
+++ b/experimental/PropertyDDS/examples/property-inspector/package.json
@@ -63,8 +63,6 @@
     "@fluidframework/shared-object-base": ">=2.0.0-internal.2.1.0 <2.0.0-internal.3.0.0",
     "@fluidframework/tinylicious-driver": ">=2.0.0-internal.2.1.0 <2.0.0-internal.3.0.0",
     "@fluidframework/view-interfaces": ">=2.0.0-internal.2.1.0 <2.0.0-internal.3.0.0",
-    "@fluid-internal/tree": ">=2.0.0-internal.2.1.0 <2.0.0-internal.3.0.0",
-    "@fluidframework/azure-client": "^1.0.2",
     "@hig/fonts": "^1.0.2",
     "@material-ui/core": "4.12.4",
     "@material-ui/lab": "4.0.0-alpha.61",
@@ -74,8 +72,7 @@
     "lodash": "^4.17.21",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-virtualized-auto-sizer": "^1.0.6",
-    "react-json-view": "^1.21.3"
+    "react-virtualized-auto-sizer": "^1.0.6"
   },
   "devDependencies": {
     "@rushstack/eslint-config": "^2.5.1",
