--- a/experimental/PropertyDDS/packages/property-inspector-table/package.json
+++ b/experimental/PropertyDDS/packages/property-inspector-table/package.json
@@ -38,6 +38,8 @@
     "tsc": "tsc"
   },
   "dependencies": {
+    "@fluidframework/common-utils": "^1.0.0",
+    "@fluid-internal/tree": ">=2.0.0-internal.2.2.0 <2.0.0-internal.3.0.0",
     "@hig/fonts": "^1.0.2",
     "@material-ui/core": "4.12.4",
     "@material-ui/lab": "4.0.0-alpha.61",
