--- a/experimental/PropertyDDS/packages/property-properties/package.json
+++ b/experimental/PropertyDDS/packages/property-properties/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@fluid-experimental/property-properties",
-	"version": "2.0.0-internal.5.2.0",
+	"version": "2.0.0-internal.5.2.0-patched",
 	"description": "definitions of properties",
 	"homepage": "https://fluidframework.com",
 	"repository": {
@@ -61,7 +61,7 @@
 		"temp-directory": "nyc/.nyc_output"
 	},
 	"dependencies": {
-		"@fluid-experimental/property-changeset": "workspace:~",
+		"@fluid-experimental/property-changeset": "2.0.0-internal.5.2.0-patched",
 		"@fluid-experimental/property-common": "workspace:~",
 		"ajv": "7.1.1",
 		"async": "^3.2.2",
