--- a/experimental/PropertyDDS/packages/property-inspector-table/package.json
+++ b/experimental/PropertyDDS/packages/property-inspector-table/package.json
@@ -41,6 +41,13 @@
 		"webpack": "webpack --config webpack.svgs.js"
 	},
 	"dependencies": {
+		"@fluid-experimental/property-binder": "workspace:~",
+		"@fluid-experimental/property-changeset": "workspace:~",
+		"@fluid-experimental/property-dds": "workspace:~",
+		"@fluid-experimental/property-properties": "workspace:~",
+		"@fluid-experimental/property-proxy": "workspace:~",
+		"@fluid-experimental/tree2": "workspace:~",
+		"@fluidframework/common-utils": "^1.1.1",
 		"@hig/fonts": "^1.0.2",
 		"@material-ui/core": "4.12.4",
 		"@material-ui/lab": "4.0.0-alpha.61",
@@ -59,11 +66,6 @@
 	},
 	"devDependencies": {
 		"@babel/core": "^7.13.0",
-		"@fluid-experimental/property-binder": "workspace:~",
-		"@fluid-experimental/property-changeset": "workspace:~",
-		"@fluid-experimental/property-dds": "workspace:~",
-		"@fluid-experimental/property-properties": "workspace:~",
-		"@fluid-experimental/property-proxy": "workspace:~",
 		"@fluid-tools/webpack-fluid-loader": "workspace:~",
 		"@fluidframework/build-common": "^2.0.0",
 		"@fluidframework/build-tools": "^0.23.0",
@@ -113,14 +115,6 @@
 		"webpack-cli": "^4.9.2",
 		"webpack-dev-server": "~4.6.0",
 		"webpack-merge": "^5.8.0"
-	},
-	"peerDependencies": {
-		"@fluid-experimental/property-binder": ">=2.0.0-internal.3.2.0 <2.0.0-internal.4.0.0",
-		"@fluid-experimental/property-changeset": ">=2.0.0-internal.3.2.0 <2.0.0-internal.4.0.0",
-		"@fluid-experimental/property-dds": ">=2.0.0-internal.3.2.0 <2.0.0-internal.4.0.0",
-		"@fluid-experimental/property-properties": ">=2.0.0-internal.3.2.0 <2.0.0-internal.4.0.0",
-		"@fluid-experimental/property-proxy": ">=2.0.0-internal.3.2.0 <2.0.0-internal.4.0.0",
-		"react": "^17.0.1"
 	},
 	"fluidBuild": {
 		"tasks": {
